fix/gap and footer under

--- a/src/components/Footer/style.module.scss
+++ b/src/components/Footer/style.module.scss
@@ -1,6 +1,8 @@
 @use "@/style/spacing" as *;
 
 .container {
+    position: fixed;
+    bottom: 0;
     width: 100%;
     height: 70px;
     background-color: #2C2C2C;
